Use monospaced font and correct whitespace in logs viewer fixes #528

--- a/client/src/components/logs.less
+++ b/client/src/components/logs.less
@@ -9,7 +9,9 @@
 
     p {
       margin: 2px 0;
-      white-space: nowrap;
+      white-space: pre;
+      font-family: "Source Code Pro", monospace;
+      font-size: 12px;
       .logs-info {
         color: #8295bb;
       }
